welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:9: error: not found: value faireV
for (i <- 1 to 4) {faireV()
                   ^